[package]
name = "mem_access-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
pretty_assertions = "1.0.0"

[dependencies.mem_access]
path = ".."
features = ["naive"]

[[bin]]
name = "read"
path = "fuzz_targets/read.rs"
test = false
doc = false
bench = false
